--- a/src/scss/parts/elements/lists.scss
+++ b/src/scss/parts/elements/lists.scss
@@ -1,6 +1,6 @@
 ul,
 ol {
-  margin: 0 0 var(--wp--preset--spacing--tiny) var(--wp--preset--spacing--xxxs);
+  margin: 0 0 var(--wp--preset--spacing--tiny) var(--wp--preset--spacing--small);
   padding-left: var(--wp--preset--spacing--normal);
 }
 
